v0.0.1/modules/schema/pages/class/ExcIEEEDC4B.adoc
= `ExcIEEEDC4B`
:toclevels: 4


+++IEEE 421.5-2005 type DC4B model. These excitation systems utilize a field-controlled DC commutator exciter with a continuously acting voltage regulator having supplies obtained from the generator or auxiliary bus.
Reference: IEEE 421.5-2005, 5.4.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:ExcIEEEDC4B`


| CIM standard (perspective)
| IEC61970 (Grid)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]
*** xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]
**** *`ExcIEEEDC4B`*


== Slots



.Associated classes
[d2,svg,theme=4]
----
vars: {
  d2-config: {
    pad: 20
  }
}
ExcIEEEDC4B {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}

































SynchronousMachineDynamics {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



PowerSystemStabilizerDynamics {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



PFVArControllerType1Dynamics {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



OverexcitationLimiterDynamics {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



DiscontinuousExcitationControlDynamics {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



PFVArControllerType2Dynamics {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



UnderexcitationLimiterDynamics {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



VoltageCompensatorDynamics {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



DiagramObject {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



InstanceSet {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Name {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



















ExcIEEEDC4B -> SynchronousMachineDynamics: SynchronousMachineDynamics


ExcIEEEDC4B -> PowerSystemStabilizerDynamics: PowerSystemStabilizerDynamics


ExcIEEEDC4B -> PFVArControllerType1Dynamics: PFVArControllerType1Dynamics


ExcIEEEDC4B -> OverexcitationLimiterDynamics: OverexcitationLimiterDynamics


ExcIEEEDC4B -> DiscontinuousExcitationControlDynamics: DiscontinuousExcitationControlDynamics


ExcIEEEDC4B -> PFVArControllerType2Dynamics: PFVArControllerType2Dynamics


ExcIEEEDC4B -> UnderexcitationLimiterDynamics: UnderexcitationLimiterDynamics


ExcIEEEDC4B -> VoltageCompensatorDynamics: VoltageCompensatorDynamics


ExcIEEEDC4B -> DiagramObject: DiagramObjects


ExcIEEEDC4B -> InstanceSet: InstanceSet


ExcIEEEDC4B -> Name: Names


ExcIEEEDC4B -> ChangeSetMember: PropertiesCIMDataObject


ExcIEEEDC4B -> ChangeSetMember: TargetingCIMDataObject


legend: "" {
  style: {
    fill: transparent
    stroke: transparent
  }
  grid-rows: 3
  grid-columns: 2
  grid-gap: 10
  near: bottom-right
  iec61968_color: "" {
    style: {
      fill: "#d1e7c2"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61968_text: "IEC61968 (Enterprise)" {
    shape: text
  }
  iec61970_color: "" {
    style: {
      fill: "#eccfcb"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61970_text: "IEC61970 (Grid)" {
    shape: text
  }
  iec62325_color: "" {
    style: {
      fill: "#fffbef"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec62325_text: "IEC62325 (Market)" {
    shape: text
  }
}
----


[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<InstanceSet,`InstanceSet`>>
| 1
| xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++

| <<SynchronousMachineDynamics,`SynchronousMachineDynamics`>>
| 1
| xref::class/SynchronousMachineDynamics.adoc[`SynchronousMachineDynamics`]
| +++Synchronous machine model with which this excitation system model is associated.+++

| <<VoltageCompensatorDynamics,`VoltageCompensatorDynamics`>>
| 1
| xref::class/VoltageCompensatorDynamics.adoc[`VoltageCompensatorDynamics`]
| +++Voltage compensator model associated with this excitation system model.+++

| <<efd1,`efd1`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Exciter voltage at which exciter saturation is defined (<i>E</i><i><sub>FD1</sub></i>) (&gt; 0).  Typical value = 1,75.+++

| <<efd2,`efd2`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Exciter voltage at which exciter saturation is defined (<i>E</i><i><sub>FD2</sub></i>) (&gt; 0).  Typical value = 2,33.+++

| <<ka,`ka`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Voltage regulator gain (<i>K</i><i><sub>A</sub></i>) (&gt; 0).  Typical value = 1.+++

| <<kd,`kd`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Regulator derivative gain (<i>K</i><i><sub>D</sub></i>) (&gt;= 0).  Typical value = 20.+++

| <<ke,`ke`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Exciter constant related to self-excited field (<i>K</i><i><sub>E</sub></i>).  Typical value = 1.+++

| <<kf,`kf`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Excitation control system stabilizer gain (<i>K</i><i><sub>F</sub></i>) (&gt;= 0).  Typical value = 0.+++

| <<ki,`ki`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Regulator integral gain (<i>K</i><i><sub>I</sub></i>) (&gt;= 0).  Typical value = 20.+++

| <<kp,`kp`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Regulator proportional gain (<i>K</i><i><sub>P</sub></i>) (&gt;= 0).  Typical value = 20.+++

| <<oelin,`oelin`>>
| 0..1
| https://w3id.org/linkml/Boolean[`boolean`]
| +++OEL input (<i>OELin</i>).
true = LV gate
false = subtract from error signal.
Typical value = true.+++

| <<seefd1,`seefd1`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Exciter saturation function value at the corresponding exciter voltage, <i>E</i><i><sub>FD1</sub></i> (<i>S</i><i><sub>E</sub></i><i>[E</i><i><sub>FD1</sub></i><i>]</i>) (&gt;= 0).  Typical value = 0,08.+++

| <<seefd2,`seefd2`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Exciter saturation function value at the corresponding exciter voltage, <i>E</i><i><sub>FD2</sub></i> (<i>S</i><i><sub>E</sub></i><i>[E</i><i><sub>FD2</sub></i><i>]</i>) (&gt;= 0).  Typical value = 0,27.+++

| <<ta,`ta`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Voltage regulator time constant (<i>T</i><i><sub>A</sub></i>) (&gt; 0).  Typical value = 0,2.+++

| <<td,`td`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Regulator derivative filter time constant (<i>T</i><i><sub>D</sub></i>) (&gt; 0 if ExcIEEEDC4B.kd &gt; 0).  Typical value = 0,01.+++

| <<te,`te`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Exciter time constant, integration rate associated with exciter control (<i>T</i><i><sub>E</sub></i>) (&gt; 0).  Typical value = 0,8.+++

| <<tf,`tf`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Excitation control system stabilizer time constant (<i>T</i><i><sub>F</sub></i>) (&gt;= 0).  Typical value = 1.+++

| <<uelin,`uelin`>>
| 0..1
| https://w3id.org/linkml/Boolean[`boolean`]
| +++UEL input (<i>UELin</i>).
true = HV gate
false = add to error signal.
Typical value = true.+++

| <<vemin,`vemin`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Minimum exciter voltage output (<i>V</i><i><sub>EMIN</sub></i>) (&lt;= 0).  Typical value = 0.+++

| <<vrmax,`vrmax`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Maximum voltage regulator output (<i>V</i><i><sub>RMAX</sub></i>) (&gt; ExcIEEEDC4B.vrmin).  Typical value = 2,7.+++

| <<vrmin,`vrmin`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Minimum voltage regulator output (<i>V</i><i><sub>RMIN</sub></i>) (&lt;= 0 and &lt; ExcIEEEDC4B.vrmax).  Typical value = -0,9.+++

| <<DiscontinuousExcitationControlDynamics,`DiscontinuousExcitationControlDynamics`>>
| 0..1
| xref::class/DiscontinuousExcitationControlDynamics.adoc[`DiscontinuousExcitationControlDynamics`]
| +++Discontinuous excitation control model associated with this excitation system model.+++

| <<OverexcitationLimiterDynamics,`OverexcitationLimiterDynamics`>>
| 0..1
| xref::class/OverexcitationLimiterDynamics.adoc[`OverexcitationLimiterDynamics`]
| +++Overexcitation limiter model associated with this excitation system model.+++

| <<PFVArControllerType1Dynamics,`PFVArControllerType1Dynamics`>>
| 0..1
| xref::class/PFVArControllerType1Dynamics.adoc[`PFVArControllerType1Dynamics`]
| +++Power factor or VAr controller type 1 model associated with this excitation system model.+++

| <<PFVArControllerType2Dynamics,`PFVArControllerType2Dynamics`>>
| 0..1
| xref::class/PFVArControllerType2Dynamics.adoc[`PFVArControllerType2Dynamics`]
| +++Power factor or VAr controller type 2 model associated with this excitation system model.+++

| <<PowerSystemStabilizerDynamics,`PowerSystemStabilizerDynamics`>>
| 0..1
| xref::class/PowerSystemStabilizerDynamics.adoc[`PowerSystemStabilizerDynamics`]
| +++Power system stabilizer model associated with this excitation system model.+++

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++

| <<UnderexcitationLimiterDynamics,`UnderexcitationLimiterDynamics`>>
| 0..1
| xref::class/UnderexcitationLimiterDynamics.adoc[`UnderexcitationLimiterDynamics`]
| +++Undrexcitation limiter model associated with this excitation system model.+++

| <<aliasName,`aliasName`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

| <<description,`description`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

| <<enabled,`enabled`>>
| 0..1
| https://w3id.org/linkml/Boolean[`boolean`]
| +++Function block used indicator.
true = use of function block is enabled
false = use of function block is disabled.+++

| <<mRID,`mRID`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

| <<name,`name`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++

| <<DiagramObjects,`DiagramObjects`>>
| 0..*
| xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++

| <<Names,`Names`>>
| 0..*
| xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..*
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#DiscontinuousExcitationControlDynamics]
=== `DiscontinuousExcitationControlDynamics`
+++Discontinuous excitation control model associated with this excitation system model.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcitationSystemDynamics.DiscontinuousExcitationControlDynamics`
| Cardinality
| 0..1
| Type
| xref::class/DiscontinuousExcitationControlDynamics.adoc[`DiscontinuousExcitationControlDynamics`]

| Inherited from
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]


|===

//[discrete]
[#efd1]
=== `efd1`
+++Exciter voltage at which exciter saturation is defined (<i>E</i><i><sub>FD1</sub></i>) (&gt; 0).  Typical value = 1,75.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcIEEEDC4B.efd1`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#efd2]
=== `efd2`
+++Exciter voltage at which exciter saturation is defined (<i>E</i><i><sub>FD2</sub></i>) (&gt; 0).  Typical value = 2,33.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcIEEEDC4B.efd2`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#enabled]
=== `enabled`
+++Function block used indicator.
true = use of function block is enabled
false = use of function block is disabled.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:DynamicsFunctionBlock.enabled`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]

| Inherited from
| xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]


|===

//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#ka]
=== `ka`
+++Voltage regulator gain (<i>K</i><i><sub>A</sub></i>) (&gt; 0).  Typical value = 1.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcIEEEDC4B.ka`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#kd]
=== `kd`
+++Regulator derivative gain (<i>K</i><i><sub>D</sub></i>) (&gt;= 0).  Typical value = 20.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcIEEEDC4B.kd`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#ke]
=== `ke`
+++Exciter constant related to self-excited field (<i>K</i><i><sub>E</sub></i>).  Typical value = 1.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcIEEEDC4B.ke`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#kf]
=== `kf`
+++Excitation control system stabilizer gain (<i>K</i><i><sub>F</sub></i>) (&gt;= 0).  Typical value = 0.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcIEEEDC4B.kf`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#ki]
=== `ki`
+++Regulator integral gain (<i>K</i><i><sub>I</sub></i>) (&gt;= 0).  Typical value = 20.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcIEEEDC4B.ki`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#kp]
=== `kp`
+++Regulator proportional gain (<i>K</i><i><sub>P</sub></i>) (&gt;= 0).  Typical value = 20.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcIEEEDC4B.kp`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#oelin]
=== `oelin`
+++OEL input (<i>OELin</i>).
true = LV gate
false = subtract from error signal.
Typical value = true.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcIEEEDC4B.oelin`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]


|===

//[discrete]
[#OverexcitationLimiterDynamics]
=== `OverexcitationLimiterDynamics`
+++Overexcitation limiter model associated with this excitation system model.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcitationSystemDynamics.OverexcitationLimiterDynamics`
| Cardinality
| 0..1
| Type
| xref::class/OverexcitationLimiterDynamics.adoc[`OverexcitationLimiterDynamics`]

| Inherited from
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]


|===

//[discrete]
[#PFVArControllerType1Dynamics]
=== `PFVArControllerType1Dynamics`
+++Power factor or VAr controller type 1 model associated with this excitation system model.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcitationSystemDynamics.PFVArControllerType1Dynamics`
| Cardinality
| 0..1
| Type
| xref::class/PFVArControllerType1Dynamics.adoc[`PFVArControllerType1Dynamics`]

| Inherited from
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]


|===

//[discrete]
[#PFVArControllerType2Dynamics]
=== `PFVArControllerType2Dynamics`
+++Power factor or VAr controller type 2 model associated with this excitation system model.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcitationSystemDynamics.PFVArControllerType2Dynamics`
| Cardinality
| 0..1
| Type
| xref::class/PFVArControllerType2Dynamics.adoc[`PFVArControllerType2Dynamics`]

| Inherited from
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]


|===

//[discrete]
[#PowerSystemStabilizerDynamics]
=== `PowerSystemStabilizerDynamics`
+++Power system stabilizer model associated with this excitation system model.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcitationSystemDynamics.PowerSystemStabilizerDynamics`
| Cardinality
| 0..1
| Type
| xref::class/PowerSystemStabilizerDynamics.adoc[`PowerSystemStabilizerDynamics`]

| Inherited from
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]


|===

//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#seefd1]
=== `seefd1`
+++Exciter saturation function value at the corresponding exciter voltage, <i>E</i><i><sub>FD1</sub></i> (<i>S</i><i><sub>E</sub></i><i>[E</i><i><sub>FD1</sub></i><i>]</i>) (&gt;= 0).  Typical value = 0,08.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcIEEEDC4B.seefd1`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#seefd2]
=== `seefd2`
+++Exciter saturation function value at the corresponding exciter voltage, <i>E</i><i><sub>FD2</sub></i> (<i>S</i><i><sub>E</sub></i><i>[E</i><i><sub>FD2</sub></i><i>]</i>) (&gt;= 0).  Typical value = 0,27.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcIEEEDC4B.seefd2`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#SynchronousMachineDynamics]
=== `SynchronousMachineDynamics`
+++Synchronous machine model with which this excitation system model is associated.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcitationSystemDynamics.SynchronousMachineDynamics`
| Cardinality
| 1
| Type
| xref::class/SynchronousMachineDynamics.adoc[`SynchronousMachineDynamics`]

| Inherited from
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]


|===

//[discrete]
[#ta]
=== `ta`
+++Voltage regulator time constant (<i>T</i><i><sub>A</sub></i>) (&gt; 0).  Typical value = 0,2.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcIEEEDC4B.ta`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#td]
=== `td`
+++Regulator derivative filter time constant (<i>T</i><i><sub>D</sub></i>) (&gt; 0 if ExcIEEEDC4B.kd &gt; 0).  Typical value = 0,01.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcIEEEDC4B.td`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#te]
=== `te`
+++Exciter time constant, integration rate associated with exciter control (<i>T</i><i><sub>E</sub></i>) (&gt; 0).  Typical value = 0,8.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcIEEEDC4B.te`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#tf]
=== `tf`
+++Excitation control system stabilizer time constant (<i>T</i><i><sub>F</sub></i>) (&gt;= 0).  Typical value = 1.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcIEEEDC4B.tf`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#uelin]
=== `uelin`
+++UEL input (<i>UELin</i>).
true = HV gate
false = add to error signal.
Typical value = true.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcIEEEDC4B.uelin`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]


|===

//[discrete]
[#UnderexcitationLimiterDynamics]
=== `UnderexcitationLimiterDynamics`
+++Undrexcitation limiter model associated with this excitation system model.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcitationSystemDynamics.UnderexcitationLimiterDynamics`
| Cardinality
| 0..1
| Type
| xref::class/UnderexcitationLimiterDynamics.adoc[`UnderexcitationLimiterDynamics`]

| Inherited from
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]


|===

//[discrete]
[#vemin]
=== `vemin`
+++Minimum exciter voltage output (<i>V</i><i><sub>EMIN</sub></i>) (&lt;= 0).  Typical value = 0.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcIEEEDC4B.vemin`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#VoltageCompensatorDynamics]
=== `VoltageCompensatorDynamics`
+++Voltage compensator model associated with this excitation system model.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcitationSystemDynamics.VoltageCompensatorDynamics`
| Cardinality
| 1
| Type
| xref::class/VoltageCompensatorDynamics.adoc[`VoltageCompensatorDynamics`]

| Inherited from
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]


|===

//[discrete]
[#vrmax]
=== `vrmax`
+++Maximum voltage regulator output (<i>V</i><i><sub>RMAX</sub></i>) (&gt; ExcIEEEDC4B.vrmin).  Typical value = 2,7.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcIEEEDC4B.vrmax`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#vrmin]
=== `vrmin`
+++Minimum voltage regulator output (<i>V</i><i><sub>RMIN</sub></i>) (&lt;= 0 and &lt; ExcIEEEDC4B.vrmax).  Typical value = -0,9.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcIEEEDC4B.vrmin`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===


