v1.1.0/modules/schema/pages/class/ExcIEEEDC4B.adoc
= `ExcIEEEDC4B`
:toclevels: 4


+++IEEE 421.5-2005 type DC4B model. These excitation systems utilize a field-controlled DC commutator exciter with a continuously acting voltage regulator having supplies obtained from the generator or auxiliary bus.
Reference: IEEE 421.5-2005, 5.4.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:ExcIEEEDC4B`


| CIM standard (perspective)
| IEC61970 (Grid)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]
*** xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]
**** *`ExcIEEEDC4B`*


== Slots




[cols="1,1,2,1",width=100%]
|===
| Name | Type | Description | Inherited from

| <<efd1,`efd1`>>
//| [[slots_table.efd1]]<<efd1,`efd1`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Exciter voltage at which exciter saturation is defined (<i>E</i><i><sub>FD1</sub></i>) (&gt; 0).  Typical value = 1,75.+++
| _n/a_

| <<efd2,`efd2`>>
//| [[slots_table.efd2]]<<efd2,`efd2`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Exciter voltage at which exciter saturation is defined (<i>E</i><i><sub>FD2</sub></i>) (&gt; 0).  Typical value = 2,33.+++
| _n/a_

| <<ka,`ka`>>
//| [[slots_table.ka]]<<ka,`ka`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Voltage regulator gain (<i>K</i><i><sub>A</sub></i>) (&gt; 0).  Typical value = 1.+++
| _n/a_

| <<kd,`kd`>>
//| [[slots_table.kd]]<<kd,`kd`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Regulator derivative gain (<i>K</i><i><sub>D</sub></i>) (&gt;= 0).  Typical value = 20.+++
| _n/a_

| <<ke,`ke`>>
//| [[slots_table.ke]]<<ke,`ke`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Exciter constant related to self-excited field (<i>K</i><i><sub>E</sub></i>).  Typical value = 1.+++
| _n/a_

| <<kf,`kf`>>
//| [[slots_table.kf]]<<kf,`kf`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Excitation control system stabilizer gain (<i>K</i><i><sub>F</sub></i>) (&gt;= 0).  Typical value = 0.+++
| _n/a_

| <<ki,`ki`>>
//| [[slots_table.ki]]<<ki,`ki`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Regulator integral gain (<i>K</i><i><sub>I</sub></i>) (&gt;= 0).  Typical value = 20.+++
| _n/a_

| <<kp,`kp`>>
//| [[slots_table.kp]]<<kp,`kp`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Regulator proportional gain (<i>K</i><i><sub>P</sub></i>) (&gt;= 0).  Typical value = 20.+++
| _n/a_

| <<oelin,`oelin`>>
//| [[slots_table.oelin]]<<oelin,`oelin`>>
| 0..1 +
https://w3id.org/linkml/Boolean[`boolean`]
| +++OEL input (<i>OELin</i>).
true = LV gate
false = subtract from error signal.
Typical value = true.+++
| _n/a_

| <<seefd1,`seefd1`>>
//| [[slots_table.seefd1]]<<seefd1,`seefd1`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++Exciter saturation function value at the corresponding exciter voltage, <i>E</i><i><sub>FD1</sub></i>...+++
| _n/a_

| <<seefd2,`seefd2`>>
//| [[slots_table.seefd2]]<<seefd2,`seefd2`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++Exciter saturation function value at the corresponding exciter voltage, <i>E</i><i><sub>FD2</sub></i>...+++
| _n/a_

| <<ta,`ta`>>
//| [[slots_table.ta]]<<ta,`ta`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Voltage regulator time constant (<i>T</i><i><sub>A</sub></i>) (&gt; 0).  Typical value = 0,2.+++
| _n/a_

| <<td,`td`>>
//| [[slots_table.td]]<<td,`td`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Regulator derivative filter time constant (<i>T</i><i><sub>D</sub></i>) (&gt; 0 if ExcIEEEDC4B.kd &gt; 0).  Typical value = 0,01.+++
| _n/a_

| <<te,`te`>>
//| [[slots_table.te]]<<te,`te`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Exciter time constant, integration rate associated with exciter control (<i>T</i><i><sub>E</sub></i>) (&gt; 0).  Typical value = 0,8.+++
| _n/a_

| <<tf,`tf`>>
//| [[slots_table.tf]]<<tf,`tf`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Excitation control system stabilizer time constant (<i>T</i><i><sub>F</sub></i>) (&gt;= 0).  Typical value = 1.+++
| _n/a_

| <<uelin,`uelin`>>
//| [[slots_table.uelin]]<<uelin,`uelin`>>
| 0..1 +
https://w3id.org/linkml/Boolean[`boolean`]
| +++UEL input (<i>UELin</i>).
true = HV gate
false = add to error signal.
Typical value = true.+++
| _n/a_

| <<vemin,`vemin`>>
//| [[slots_table.vemin]]<<vemin,`vemin`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Minimum exciter voltage output (<i>V</i><i><sub>EMIN</sub></i>) (&lt;= 0).  Typical value = 0.+++
| _n/a_

| <<vrmax,`vrmax`>>
//| [[slots_table.vrmax]]<<vrmax,`vrmax`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Maximum voltage regulator output (<i>V</i><i><sub>RMAX</sub></i>) (&gt; ExcIEEEDC4B.vrmin).  Typical value = 2,7.+++
| _n/a_

| <<vrmin,`vrmin`>>
//| [[slots_table.vrmin]]<<vrmin,`vrmin`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Minimum voltage regulator output (<i>V</i><i><sub>RMIN</sub></i>) (&lt;= 0 and &lt; ExcIEEEDC4B.vrmax).  Typical value = -0,9.+++
| _n/a_

| <<DiscontinuousExcitationControlDynamics,`DiscontinuousExcitationControlDynamics`>>
//| [[slots_table.DiscontinuousExcitationControlDynamics]]<<DiscontinuousExcitationControlDynamics,`DiscontinuousExcitationControlDynamics`>>
| 0..1 +
xref::class/DiscontinuousExcitationControlDynamics.adoc[`DiscontinuousExcitationControlDynamics`]
| +++Discontinuous excitation control model associated with this excitation system model.+++
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]

| <<OverexcitationLimiterDynamics,`OverexcitationLimiterDynamics`>>
//| [[slots_table.OverexcitationLimiterDynamics]]<<OverexcitationLimiterDynamics,`OverexcitationLimiterDynamics`>>
| 0..1 +
xref::class/OverexcitationLimiterDynamics.adoc[`OverexcitationLimiterDynamics`]
| +++Overexcitation limiter model associated with this excitation system model.+++
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]

| <<PFVArControllerType1Dynamics,`PFVArControllerType1Dynamics`>>
//| [[slots_table.PFVArControllerType1Dynamics]]<<PFVArControllerType1Dynamics,`PFVArControllerType1Dynamics`>>
| 0..1 +
xref::class/PFVArControllerType1Dynamics.adoc[`PFVArControllerType1Dynamics`]
| +++Power factor or VAr controller type 1 model associated with this excitation system model.+++
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]

| <<PFVArControllerType2Dynamics,`PFVArControllerType2Dynamics`>>
//| [[slots_table.PFVArControllerType2Dynamics]]<<PFVArControllerType2Dynamics,`PFVArControllerType2Dynamics`>>
| 0..1 +
xref::class/PFVArControllerType2Dynamics.adoc[`PFVArControllerType2Dynamics`]
| +++Power factor or VAr controller type 2 model associated with this excitation system model.+++
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]

| <<PowerSystemStabilizerDynamics,`PowerSystemStabilizerDynamics`>>
//| [[slots_table.PowerSystemStabilizerDynamics]]<<PowerSystemStabilizerDynamics,`PowerSystemStabilizerDynamics`>>
| 0..1 +
xref::class/PowerSystemStabilizerDynamics.adoc[`PowerSystemStabilizerDynamics`]
| +++Power system stabilizer model associated with this excitation system model.+++
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]

| <<SynchronousMachineDynamics,`SynchronousMachineDynamics`>>
//| [[slots_table.SynchronousMachineDynamics]]<<SynchronousMachineDynamics,`SynchronousMachineDynamics`>>
| 1 +
xref::class/SynchronousMachineDynamics.adoc[`SynchronousMachineDynamics`]
| +++Synchronous machine model with which this excitation system model is associated.+++
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]

| <<UnderexcitationLimiterDynamics,`UnderexcitationLimiterDynamics`>>
//| [[slots_table.UnderexcitationLimiterDynamics]]<<UnderexcitationLimiterDynamics,`UnderexcitationLimiterDynamics`>>
| 0..1 +
xref::class/UnderexcitationLimiterDynamics.adoc[`UnderexcitationLimiterDynamics`]
| +++Undrexcitation limiter model associated with this excitation system model.+++
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]

| <<VoltageCompensatorDynamics,`VoltageCompensatorDynamics`>>
//| [[slots_table.VoltageCompensatorDynamics]]<<VoltageCompensatorDynamics,`VoltageCompensatorDynamics`>>
| 1 +
xref::class/VoltageCompensatorDynamics.adoc[`VoltageCompensatorDynamics`]
| +++Voltage compensator model associated with this excitation system model.+++
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]

| <<enabled,`enabled`>>
//| [[slots_table.enabled]]<<enabled,`enabled`>>
| 0..1 +
https://w3id.org/linkml/Boolean[`boolean`]
| +++Function block used indicator.
true = use of function block is enabled
false = use of function block is disabled.+++
| xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]

| <<DiagramObjects,`DiagramObjects`>>
//| [[slots_table.DiagramObjects]]<<DiagramObjects,`DiagramObjects`>>
| 0..* +
xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<InstanceSet,`InstanceSet`>>
//| [[slots_table.InstanceSet]]<<InstanceSet,`InstanceSet`>>
| 1 +
xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<Names,`Names`>>
//| [[slots_table.Names]]<<Names,`Names`>>
| 0..* +
xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
//| [[slots_table.PropertiesCIMDataObject]]<<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1 +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
//| [[slots_table.TargetingCIMDataObject]]<<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..* +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<aliasName,`aliasName`>>
//| [[slots_table.aliasName]]<<aliasName,`aliasName`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<description,`description`>>
//| [[slots_table.description]]<<description,`description`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<mRID,`mRID`>>
//| [[slots_table.mRID]]<<mRID,`mRID`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<name,`name`>>
//| [[slots_table.name]]<<name,`name`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.aliasName,&#10548;>>
--
////


//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.description,&#10548;>>
--
////


//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.DiagramObjects,&#10548;>>
--
////


//[discrete]
[#DiscontinuousExcitationControlDynamics]
=== `DiscontinuousExcitationControlDynamics`
+++Discontinuous excitation control model associated with this excitation system model.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcitationSystemDynamics.DiscontinuousExcitationControlDynamics`
| Cardinality
| 0..1
| Type
| xref::class/DiscontinuousExcitationControlDynamics.adoc[`DiscontinuousExcitationControlDynamics`]

| Inherited from
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]


|===

////
[.text-left]
--
<<slots_table.DiscontinuousExcitationControlDynamics,&#10548;>>
--
////


//[discrete]
[#efd1]
=== `efd1`
+++Exciter voltage at which exciter saturation is defined (<i>E</i><i><sub>FD1</sub></i>) (&gt; 0).  Typical value = 1,75.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcIEEEDC4B.efd1`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.efd1,&#10548;>>
--
////


//[discrete]
[#efd2]
=== `efd2`
+++Exciter voltage at which exciter saturation is defined (<i>E</i><i><sub>FD2</sub></i>) (&gt; 0).  Typical value = 2,33.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcIEEEDC4B.efd2`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.efd2,&#10548;>>
--
////


//[discrete]
[#enabled]
=== `enabled`
+++Function block used indicator.
true = use of function block is enabled
false = use of function block is disabled.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:DynamicsFunctionBlock.enabled`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]

| Inherited from
| xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]


|===

////
[.text-left]
--
<<slots_table.enabled,&#10548;>>
--
////


//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.InstanceSet,&#10548;>>
--
////


//[discrete]
[#ka]
=== `ka`
+++Voltage regulator gain (<i>K</i><i><sub>A</sub></i>) (&gt; 0).  Typical value = 1.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcIEEEDC4B.ka`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.ka,&#10548;>>
--
////


//[discrete]
[#kd]
=== `kd`
+++Regulator derivative gain (<i>K</i><i><sub>D</sub></i>) (&gt;= 0).  Typical value = 20.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcIEEEDC4B.kd`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.kd,&#10548;>>
--
////


//[discrete]
[#ke]
=== `ke`
+++Exciter constant related to self-excited field (<i>K</i><i><sub>E</sub></i>).  Typical value = 1.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcIEEEDC4B.ke`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.ke,&#10548;>>
--
////


//[discrete]
[#kf]
=== `kf`
+++Excitation control system stabilizer gain (<i>K</i><i><sub>F</sub></i>) (&gt;= 0).  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcIEEEDC4B.kf`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.kf,&#10548;>>
--
////


//[discrete]
[#ki]
=== `ki`
+++Regulator integral gain (<i>K</i><i><sub>I</sub></i>) (&gt;= 0).  Typical value = 20.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcIEEEDC4B.ki`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.ki,&#10548;>>
--
////


//[discrete]
[#kp]
=== `kp`
+++Regulator proportional gain (<i>K</i><i><sub>P</sub></i>) (&gt;= 0).  Typical value = 20.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcIEEEDC4B.kp`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.kp,&#10548;>>
--
////


//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.mRID,&#10548;>>
--
////


//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.name,&#10548;>>
--
////


//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.Names,&#10548;>>
--
////


//[discrete]
[#oelin]
=== `oelin`
+++OEL input (<i>OELin</i>).
true = LV gate
false = subtract from error signal.
Typical value = true.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcIEEEDC4B.oelin`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]


|===

////
[.text-left]
--
<<slots_table.oelin,&#10548;>>
--
////


//[discrete]
[#OverexcitationLimiterDynamics]
=== `OverexcitationLimiterDynamics`
+++Overexcitation limiter model associated with this excitation system model.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcitationSystemDynamics.OverexcitationLimiterDynamics`
| Cardinality
| 0..1
| Type
| xref::class/OverexcitationLimiterDynamics.adoc[`OverexcitationLimiterDynamics`]

| Inherited from
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]


|===

////
[.text-left]
--
<<slots_table.OverexcitationLimiterDynamics,&#10548;>>
--
////


//[discrete]
[#PFVArControllerType1Dynamics]
=== `PFVArControllerType1Dynamics`
+++Power factor or VAr controller type 1 model associated with this excitation system model.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcitationSystemDynamics.PFVArControllerType1Dynamics`
| Cardinality
| 0..1
| Type
| xref::class/PFVArControllerType1Dynamics.adoc[`PFVArControllerType1Dynamics`]

| Inherited from
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]


|===

////
[.text-left]
--
<<slots_table.PFVArControllerType1Dynamics,&#10548;>>
--
////


//[discrete]
[#PFVArControllerType2Dynamics]
=== `PFVArControllerType2Dynamics`
+++Power factor or VAr controller type 2 model associated with this excitation system model.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcitationSystemDynamics.PFVArControllerType2Dynamics`
| Cardinality
| 0..1
| Type
| xref::class/PFVArControllerType2Dynamics.adoc[`PFVArControllerType2Dynamics`]

| Inherited from
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]


|===

////
[.text-left]
--
<<slots_table.PFVArControllerType2Dynamics,&#10548;>>
--
////


//[discrete]
[#PowerSystemStabilizerDynamics]
=== `PowerSystemStabilizerDynamics`
+++Power system stabilizer model associated with this excitation system model.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcitationSystemDynamics.PowerSystemStabilizerDynamics`
| Cardinality
| 0..1
| Type
| xref::class/PowerSystemStabilizerDynamics.adoc[`PowerSystemStabilizerDynamics`]

| Inherited from
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]


|===

////
[.text-left]
--
<<slots_table.PowerSystemStabilizerDynamics,&#10548;>>
--
////


//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.PropertiesCIMDataObject,&#10548;>>
--
////


//[discrete]
[#seefd1]
=== `seefd1`
+++Exciter saturation function value at the corresponding exciter voltage, <i>E</i><i><sub>FD1</sub></i> (<i>S</i><i><sub>E</sub></i><i>[E</i><i><sub>FD1</sub></i><i>]</i>) (&gt;= 0).  Typical value = 0,08.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcIEEEDC4B.seefd1`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

////
[.text-left]
--
<<slots_table.seefd1,&#10548;>>
--
////


//[discrete]
[#seefd2]
=== `seefd2`
+++Exciter saturation function value at the corresponding exciter voltage, <i>E</i><i><sub>FD2</sub></i> (<i>S</i><i><sub>E</sub></i><i>[E</i><i><sub>FD2</sub></i><i>]</i>) (&gt;= 0).  Typical value = 0,27.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcIEEEDC4B.seefd2`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

////
[.text-left]
--
<<slots_table.seefd2,&#10548;>>
--
////


//[discrete]
[#SynchronousMachineDynamics]
=== `SynchronousMachineDynamics`
+++Synchronous machine model with which this excitation system model is associated.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcitationSystemDynamics.SynchronousMachineDynamics`
| Cardinality
| 1
| Type
| xref::class/SynchronousMachineDynamics.adoc[`SynchronousMachineDynamics`]

| Inherited from
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]


|===

////
[.text-left]
--
<<slots_table.SynchronousMachineDynamics,&#10548;>>
--
////


//[discrete]
[#ta]
=== `ta`
+++Voltage regulator time constant (<i>T</i><i><sub>A</sub></i>) (&gt; 0).  Typical value = 0,2.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcIEEEDC4B.ta`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.ta,&#10548;>>
--
////


//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.TargetingCIMDataObject,&#10548;>>
--
////


//[discrete]
[#td]
=== `td`
+++Regulator derivative filter time constant (<i>T</i><i><sub>D</sub></i>) (&gt; 0 if ExcIEEEDC4B.kd &gt; 0).  Typical value = 0,01.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcIEEEDC4B.td`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.td,&#10548;>>
--
////


//[discrete]
[#te]
=== `te`
+++Exciter time constant, integration rate associated with exciter control (<i>T</i><i><sub>E</sub></i>) (&gt; 0).  Typical value = 0,8.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcIEEEDC4B.te`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.te,&#10548;>>
--
////


//[discrete]
[#tf]
=== `tf`
+++Excitation control system stabilizer time constant (<i>T</i><i><sub>F</sub></i>) (&gt;= 0).  Typical value = 1.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcIEEEDC4B.tf`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.tf,&#10548;>>
--
////


//[discrete]
[#uelin]
=== `uelin`
+++UEL input (<i>UELin</i>).
true = HV gate
false = add to error signal.
Typical value = true.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcIEEEDC4B.uelin`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]


|===

////
[.text-left]
--
<<slots_table.uelin,&#10548;>>
--
////


//[discrete]
[#UnderexcitationLimiterDynamics]
=== `UnderexcitationLimiterDynamics`
+++Undrexcitation limiter model associated with this excitation system model.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcitationSystemDynamics.UnderexcitationLimiterDynamics`
| Cardinality
| 0..1
| Type
| xref::class/UnderexcitationLimiterDynamics.adoc[`UnderexcitationLimiterDynamics`]

| Inherited from
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]


|===

////
[.text-left]
--
<<slots_table.UnderexcitationLimiterDynamics,&#10548;>>
--
////


//[discrete]
[#vemin]
=== `vemin`
+++Minimum exciter voltage output (<i>V</i><i><sub>EMIN</sub></i>) (&lt;= 0).  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcIEEEDC4B.vemin`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.vemin,&#10548;>>
--
////


//[discrete]
[#VoltageCompensatorDynamics]
=== `VoltageCompensatorDynamics`
+++Voltage compensator model associated with this excitation system model.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcitationSystemDynamics.VoltageCompensatorDynamics`
| Cardinality
| 1
| Type
| xref::class/VoltageCompensatorDynamics.adoc[`VoltageCompensatorDynamics`]

| Inherited from
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]


|===

////
[.text-left]
--
<<slots_table.VoltageCompensatorDynamics,&#10548;>>
--
////


//[discrete]
[#vrmax]
=== `vrmax`
+++Maximum voltage regulator output (<i>V</i><i><sub>RMAX</sub></i>) (&gt; ExcIEEEDC4B.vrmin).  Typical value = 2,7.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcIEEEDC4B.vrmax`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.vrmax,&#10548;>>
--
////


//[discrete]
[#vrmin]
=== `vrmin`
+++Minimum voltage regulator output (<i>V</i><i><sub>RMIN</sub></i>) (&lt;= 0 and &lt; ExcIEEEDC4B.vrmax).  Typical value = -0,9.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcIEEEDC4B.vrmin`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.vrmin,&#10548;>>
--
////





== Used by


This class is not used by any other classes as the range of a slot.
